# ftlib

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  a.out  cmake_install.cmake  ftlib.c  main.c  prova.json
.github/workflows/: compile.yml
src/: ftlib.c  ftlib.h  win_functions.c  win_functions.h
src/ftl/: ftl.h
src/ftl/ftl_functions/: ftl_func.c  ftl_struct.c
src/functions/: find_file.c  find_file_functions.c  init.c  init_functions.c  utility.c  utility_functions.c
src/header/: ftlib.h  struct.c
src/include/: ftlib.h
src/json_functions/: fileMan.cpp
src/os_functions/: os_scan.c  util.c
test/: linux_test.c  main.c  win_test.c
